<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SSI Wallet Demo</string>
    <string name="nav_header_subtitle" translatable="false">christoph.weissenborn@posteo.de</string>
    <string name="navigation_drawer_open">open navigation bar</string>
    <string name="navigation_drawer_close">close navigation bar</string>
    <string name="nav_header_title">SSI Wallet Demo</string>
    <string name="nav_header_desc">navigation</string>
    <string name="action_settings">exit</string>
    <string name="menu_home">identities</string>
    <string name="spinnerIdentities">select identity as filter</string>
    <string name="menu_gallery">verifiable credentials</string>
    <string name="menu_slideshow">authorities</string>
    <string name="menu_help">help</string>
    <string name="title_activity_login">SSI-Wallet security pin</string>
    <string name="prompt_email">email</string>
    <string name="prompt_password">PIN or password (DEMO PIN: 1234)</string>
    <string name="action_sign_in">login</string>
    <string name="action_sign_in_short">login</string>
    <string name="welcome">Welcome!</string>
    <string name="invalid_username">invalid PIN</string>
    <string name="invalid_password">PIN has 4 characters</string>
    <string name="login_failed">PIN incorrect</string>
    <string name="born_short">born</string>
    <string name="nope_new">Adding new identities, attributes and authorities not implemented</string>
    <string name="nope">This feature was not implemented in the demo version</string>.
    <string name="germany">Germany (DE)</string>
    <string name="identity">identity</string>.
    <string name="issuer">issuer</string>
    <string name="owner">owner</string>
    <string name="nobody">nobody</string>
    <string name="claim">claim</string>
    <string name="nothing">-</string>
    <string name="signature">signature</string>
    <string name="signatures">signatures</string>
    <string name="signature_verification">signature verification</string>.
    <string name="copy_to_clipbaord">copy to clipboard</string>
    <string name="copied_to_clipbaord">copied to clipboard</string>
    <string name="valid">valid</string>
    <string name="confirms">confirmed</string>
    <string name="invalid">could not be assigned to an authority</string>
    <string name="vc">verifiable credentials</string>
    <string name="send">send</string>
    <string name="authority">authority</string>
    <string name="birthday">birthday</string>
    <string name="valid_since">issue date</string>
    <string name="valid_until">valid until</string>
    <string name="signing_explanation_default">The SSI user "%s" wants you to digitally sign the following document:</string>
    <string name="signing_explanation_login"> The app "%s" asks if you want to log in to it with an SSI identity:</string>
    <string name="signing_explanation_multiselect">The app "%s" asks you to select credentials to be presented to it:</string>
    <string name="added_vc">New verifiable property filed in SSI Wallet</string>.
    <string name="signing_select_id">select identity:</string>
    <string name="signing_denied">deny</string>.
    <string name="signing_allow">sign</string>
    <string name="login">Login in %s</string>
    <string name="all_identities">All identities</string>
    <string name="netherlands">Netherlands (NL)</string>
    <string name="descriptionAvatar">An image associated with the current wallet element. This can be something like a photo of the person or a company logo.</string>.
    <string name="descriptionQRCode">A QR code that contains the data of the current wallet item and can be read with a QR reader.</string>.
    <string name="descriptionSelectIdentity">Select field for the SSI identity</string>.
    <string name="help_vcs_title">How do I show my credentials?</string>
    <string name="help_vcs">If you want to show your proofs offline, just show the QR code of the proof. If they want to show a proof online, they select the show function in the corresponding application. The external application will then call the wallet app where they can select their proofs.</string>.
    <string name="help_signing_title">How can I sign documents?</string>
    <string name="help_signing">Select a document in another app and share it with the Wallet app. The Wallet app can only sign verifiable credentials so far</string>.
    <string name="help_verification_title">How can I verify proofs?</string>
    <string name="help_verification">Select a verifiable proof in another app and click the "Details" feature there. This should open the wallet app. </string>
    <string name="help_more">For more information, visit https://github.com/gXeeXqBHuHDFTaEnff3Z/ssi_demos</string>.
    <string name="excpetion_rep_format">The proof is in an unreadable format.</string>
    <string name="termsOfUse">Terms of Use</string>
    <string name="termsOfUse_noArchive">This data shall not be archived.</string>
    <string name="termsOfUse_noArchiveBy">My data shall not be archived by %s.</string>
    <string name="termsOfUse_noArchiveLogin">My login identity shall not be remembered by %s.</string>
    <string name="termsOfUser_target">This data is only meant to be used in %s</string>
    <string name="confirmed">confirmed</string>
    <string name="none">none</string>
</resources>