<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/row_vc_layoutTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:background="@color/pass1"
                android:minHeight="42dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:background="#FFFFFF"
                    android:clickable="true"
                    android:focusable="true"
                    android:maxWidth="64dp"
                    android:maxHeight="64dp"
                    android:minWidth="48dp" />

                <ImageView
                    android:id="@+id/imgV_IDs_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/descriptionAvatar"
                    android:maxWidth="48dp"
                    android:maxHeight="48dp"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@drawable/ic_certificate_white" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRecyclerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="8dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/identity"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_large" />

                </LinearLayout>

            </LinearLayout>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView12"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/claim"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:id="@+id/tcRecyclerValue"
                        android:layout_width="0dp"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:ellipsize="end"
                        android:maxLines="6"
                        android:text="@string/descriptionQRCode"
                        android:textSize="@dimen/text_small" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView13"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:text="@string/signatures"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:id="@+id/tvRecyclerSignature"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:padding="12dp"
                        android:text="@string/signature"
                        android:textSize="@dimen/text_large" />

                    <ImageButton
                        android:id="@+id/rcVC_sig_copy"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="8dp"
                        android:background="#FFFFFF"
                        android:contentDescription="@string/copy_to_clipbaord"
                        android:padding="12dp"
                        app:srcCompat="?attr/actionModeCopyDrawable" />
                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/textView14"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/owner"
                        android:textSize="@dimen/text_small" />

                    <TextView
                        android:id="@+id/txtVrcVCOwner"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_margin="8dp"
                        android:layout_weight="1"
                        android:text="@string/owner"
                        android:textSize="@dimen/text_small" />
                </TableRow>

            </TableLayout>

            <ImageView
                android:id="@+id/imgV_IDs_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginTop="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/descriptionQRCode"
                android:visibility="visible"
                tools:ignore="ImageContrastCheck"
                tools:srcCompat="@tools:sample/avatars" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
