<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="2"
                android:minLines="1"
                android:text="@string/vc"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/det_tv_claim"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="100"
                android:background="@drawable/black_border_grey_bg"
                android:maxLines="20"
                android:minLines="3"
                android:text="@string/nothing"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:maxLines="2"
                android:minLines="1"
                android:text="@string/signatures"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/det_tv_proofcheck"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="100"
                android:background="@drawable/black_border"
                android:maxLines="5"
                android:minLines="3"
                android:text="@string/nothing"
                android:textSize="@dimen/text_small" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="start"
                android:maxLines="2"
                android:minLines="1"
                android:text="@string/signature_verification"
                android:textSize="@dimen/text_large" />

            <TextView
                android:id="@+id/det_tv_verification"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:layout_weight="100"
                android:background="@drawable/black_border"
                android:maxLines="5"
                android:minLines="2"
                android:text="@string/nothing"
                android:textSize="@dimen/text_small" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>