<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:padding="10dp">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:minHeight="120dp"
                android:orientation="horizontal">

                <CheckBox
                    android:id="@+id/checkRecyclerView"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:clickable="true"
                    android:focusable="true" />

                <ImageView
                    android:id="@+id/imgV_IDs_avatar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center_vertical"
                    android:layout_margin="8dp"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/descriptionAvatar"
                    android:maxWidth="120dp"
                    android:maxHeight="120dp"
                    tools:ignore="ImageContrastCheck"
                    tools:srcCompat="@tools:sample/avatars" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvRecyclerName"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="20dp"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:text="@string/identity"
                        android:textSize="@dimen/text_large" />

                    <TextView
                        android:id="@+id/tcRecyclerValue"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="20dp"
                        android:layout_marginEnd="20dp"
                        android:ellipsize="end"
                        android:maxLines="3"
                        android:text="@string/signature"
                        android:textSize="@dimen/text_small" />

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvRecyclerSignature"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/signature"
                android:textSize="@dimen/text_small" />

            <ImageView
                android:id="@+id/imgV_IDs_qrcode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_margin="10dp"
                android:layout_marginTop="120dp"
                android:adjustViewBounds="true"
                android:contentDescription="@string/descriptionQRCode"
                tools:srcCompat="@tools:sample/avatars" />
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>
